--- a/.env.interview
+++ b/.env.interview
@@ -1,15 +1,13 @@
-# DevOps Interview Environment Info
-# Generated: Thu Nov 27 10:47:07 IST 2025
+# DevOps Interview Configuration
+# Generated: Thu Nov 27 12:38:56 IST 2025
+# WARNING: This file contains sensitive credentials - DO NOT commit to Git!
 
-MINIKUBE_IP=192.168.49.2
-JENKINS_URL=http://localhost:8080
-
-# Docker is configured to use minikube's Docker daemon
-# This was done automatically during setup with: eval $(minikube docker-env)
-# Jenkins runs in HOST Docker and remains accessible at localhost:8080
-
-# Minikube registry:
-# REGISTRY=localhost:5000
-
-# To switch back to host Docker (if needed):
-# eval $(minikube docker-env --unset)
+GITLAB_URL=https://github.com/gabrielrosinski/automation-toolkit/tree/main/buged-php
+GITLAB_USERNAME=b
+GITLAB_TOKEN=b
+APP_NAME=buged-php
+APP_PORT=80
+K8S_NAMESPACE=default
+GIT_BRANCH=main
+PHP_VERSION=8.1
+DOCKER_REGISTRY=localhost:5000
